# rpass

./: .gitignore  .gitmodules  Cargo.toml  LICENCE.gpg  README.md  build.sh  docs  main.rs
browser-extension/: Cargo.toml
browser-extension/src/: main.rs
src/: api.rs  crypto.rs  error.rs  git.rs  interface.rs  lib.rs  pass.rs  signature.rs
src/tests/: crypto.rs  pass.rs
