[package]
name = "rpass"
description = "A rust password manager with browser extension that uses the file format of the standard unix password manager 'pass', forked from cortex/ripasso: https://github.com/cortex/ripasso"
version = "0.1"
repository = "https://github.com/kennethjang34/rpass/"
keywords = ["password-manager", "pass","chrome-extension","firefox-extension"]
authors = ["kennethjang34"]
license = "GPL-3.0-only"
edition = '2021'

[dependencies]
glob = "0.3.1"
gpgme = "0.11.0"
chrono = { version = "0.4", default_features = false, features = ["clock"] }
git2 = "0.17.1"
rand = "0.8.5"
whoami = "1.4.0"
toml = "0.7.3"
reqwest = { version = "0.11.17", features = ["blocking"] }
hex = "0.4.3"
totp-rs = { version = "5.0.1", features = ["otpauth"] }
sequoia-openpgp = "1.16.0"
anyhow = "1.0.71"
sequoia-ipc = "0.30.1"
base64 = "0.21.0"
sha2 = "0.10.6"
sha1 = "0.10.5"
hmac = "0.12.1"

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3.5.0"
flate2 = "1.0.26"
tar = "0.4.38"
criterion = "0.4.0"

[workspace]

members = [
    "browser-extension"
]

[[bench]]
name = "library_benchmark"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = false
