[package]
name = "rpass"
description = "A rust password manager with browser extension that uses the file format of the standard unix password manager 'pass', forked from cortex/ripasso: https://github.com/cortex/ripasso"
version = "0.1.0"
repository = "https://github.com/kennethjang34/rpass/"
keywords = ["password-manager", "pass","chrome-extension","firefox-extension"]
authors = ["kennethjang34"]
license = "GPL-3.0-only"
edition = '2021'

[lib]
crate-type = ["rlib", "cdylib"]


[features]
default = ["dep:gpgme","dep:git2", "dep:pinentry"]
interface=[]

[dependencies]
glob = "0.3.1"
gpgme = {version="0.11.0", optional=true}
chrono = { version = "0.4.24", features = ["serde"]}
git2 = {version="0.17.1", optional=true}
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.2"
whoami = "1.4.0"
toml = {version="0.7.3"}
reqwest = { version = "0.11.17", features = ["blocking"] }
hex = "0.4.3"
totp-rs = { version = "5.0.1", features = ["otpauth"] }
anyhow = "1.0.71"
base64 = "0.21.0"
sha2 = "0.10.6"
sha1 = "0.10.5"
hmac = "0.12.1"
serde = { version = "1.0.174", features = ["derive"] }
log={version="0.4", features=["max_level_trace", "release_max_level_warn"]}
uuid = {version="1.6.1", features = ["serde","v4","macro-diagnostics"]}
fern = {version="0.6.2", features=["colored"]}
serde_json = "1.0.96"
array_tool = "1.0.3"
pinentry = {version="0.5.0", optional=true}
secrecy = {version="0.8.0",features=["serde"]}
gpgme-sys = {version="0.11.0", optional=true}
libc = {version="0.2.151"}
serde_variant = "0.1.2"

[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3.5.0"
flate2 = "1.0.26"
tar = "0.4.38"
criterion = "0.4.0"

[workspace]
exclude=["./browser-extension"]
