[package]
name = "browser-extension"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cli-clipboard = "0.4.0"
rpass = { path = "../"}
locale_config = "0.3.0"
unic-langid = "0.9.1"
gettext = "0.4.0"
lazy_static = "1.4.0"
toml = "0.7.3"
terminal_size = "0.2.6"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
hex = "0.4.3"
strum = {version = "0.21.0", features = ["derive"] }
strum_macros = "0.21.0"


[dependencies.config]
version = "0.11.0"
default-features = false
features = ["toml"]

[dev-dependencies]
tempfile = "3.5.0"
chrono = { version = "0.4", default_features = false, features = ["clock"] }

[build-dependencies]
glob = "0.3.1"
man = "0.3.0"
